transparent gap fix

--- a/modules/openy_features/openy_egym_iwatch/src/scss/openy_egym_iwatch.scss
+++ b/modules/openy_features/openy_egym_iwatch/src/scss/openy_egym_iwatch.scss
@@ -309,7 +309,7 @@
   }
 
   .pre-footer {
-    margin: -20px;
+    margin: -50px;
   }
 }
 
